# Copyright (C) 2021 Serghei Iakovlev <egrep@protonmail.ch>
#
# This file is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 3
# of the License, or (at your option) any later version.
#
# This file is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this file.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
license_file = LICENSE
description_file = README.rst
long_description_content_type = text/x-rst

[tool:pytest]
addopts = --verbose --ds=branch.settings.test

[flake8]
exclude = .git,__pycache__,.eggs,.pytest_cache,.venv,assets,build,dist,htmlcov,node_modules,provision,static
application-import-names = branch,apps.blog,apps.pages,apps.telegraph,apps.website
import-order-style = smarkets
max-complexity = 10
ignore = F405

[coverage:report]
omit =
    */tests/*
    */migrations/*
    .venv/*
    */apps.py
    */__init__.py
show_missing = True
