# Copyright (C) 2021 Serghei Iakovlev <egrep@protonmail.ch>
#
# This file is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 3
# of the License, or (at your option) any later version.
#
# This file is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this file.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
license_file = LICENSE
description_file = README.rst
long_description_content_type = text/x-rst

[tool:pytest]
addopts = --verbose --ds=branch.settings.test

[flake8]
# Base flake8 configuration:
statistics = True
show-source = True

# Plugins:
max-complexity = 10
application-import-names = branch,apps
import-order-style = smarkets

# A list of mappings of files and the codes that should be ignored for
# the entirety of the file:
per-file-ignores =
    apps/*/migrations/*.py:D
    apps/__init__.py:D104
    apps/*/__init__.py:D104
    branch/*/__init__.py:D104
    apps/*/tests/*.py:D
    branch/tests/*.py:D
    setup.py:D100

# Exclude some violation checks globally:
extend-ignore = F405

# Excluding some directories:
extend-exclude =
    .pytest_cache,
    .venv,
    assets,
    build*,
    dist,
    htmlcov,
    node_modules,
    static

[coverage:report]
omit =
    */tests/*
    */migrations/*
    .venv/*
    */apps.py
show_missing = True
